--- a/package/css/redpapr.css
+++ b/package/css/redpapr.css
@@ -63,3 +63,7 @@ h1.homepage-section-heading {
 .red-button-lg {
 	@apply px-8 py-6 text-lg border-y-4;
 }
+
+.red-link {
+	@apply duration-300 hover:text-red-500;
+}
