--- a/package/css/redpapr.css
+++ b/package/css/redpapr.css
@@ -104,6 +104,14 @@ h1.homepage-section-heading {
   @apply duration-300 hover:text-red-500;
 }
 
+.redpapr-theme-light {
+  @apply bg-white text-zinc-950;
+}
+
+.redpapr-theme-dark {
+  @apply bg-zinc-950 text-white;
+}
+
 .redpapr-theme-light .bg-50 {
   @apply bg-zinc-50;
 }
