--- a/package/scss/misc.scss
+++ b/package/scss/misc.scss
@@ -1,4 +1,8 @@
 
+.slow {
+	@apply duration-300;
+}
+
 a.link {
 	@apply text-blue-400 underline;
 }
@@ -7,7 +11,7 @@ a.link {
 	@apply max-w-5xl mx-auto px-4 py-4;
 }
 
-button {
+.button {
 	@apply px-5 py-4 font-bold bg-zinc-950 rounded shadow;
 }
 
@@ -19,11 +23,11 @@ button {
 	@apply max-w-5xl mx-auto px-2 py-12;
 }
 
-header.homepage-section-header {
+.homepage-section-header {
 	@apply text-center py-8;
 }
 
-footer.homepage-section-footer {
+.homepage-section-footer {
 	@apply text-center py-8;
 }
 
