--- a/node/css/redpapr.css
+++ b/node/css/redpapr.css
@@ -56,6 +56,10 @@ h1, h2, h3, h4, h5, h6,
   @apply font-bold leading-9;
 }
 
+p, .p1, .p2, .p3, .p4, .p5, .p6 {
+  @apply leading-8;
+}
+
 .slow {
   @apply duration-300;
 }
@@ -109,11 +113,11 @@ h1.homepage-section-heading {
 }
 
 .redpapr-theme-light {
-  @apply bg-white text-zinc-950;
+  @apply bg-white text-zinc-600;
 }
 
 .redpapr-theme-dark {
-  @apply bg-zinc-950 text-white;
+  @apply bg-zinc-950 text-zinc-300;
 }
 
 .redpapr-theme-light .bg-50 {
