--- a/node/scss/text.scss
+++ b/node/scss/text.scss
@@ -19,3 +19,7 @@ h1, h2, h3, h4, h5, h6,
 .g0, .g1, .g2, .g3, .g4, .g5, .g6 {
 	@apply font-bold leading-9;
 }
+
+p, .p1, .p2, .p3, .p4, .p5, .p6 {
+	@apply leading-8;
+}
