--- a/node/scss/theme.scss
+++ b/node/scss/theme.scss
@@ -1,8 +1,8 @@
 
 $shades: 50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 950;
 
-.redpapr-theme-light { @apply bg-white text-zinc-950; }
-.redpapr-theme-dark { @apply bg-zinc-950 text-white; }
+.redpapr-theme-light { @apply bg-white text-zinc-600; }
+.redpapr-theme-dark { @apply bg-zinc-950 text-zinc-300; }
 
 @each $shade in $shades {
 	.redpapr-theme-light {
